tools/tests/errors/key_not_found.ki
var d = {1: 2}
d[9]
